<resources>
    <string name="app_name">Michelin Connected Fleet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="nav_profile">Profile</string>
    <string name="nav_home">Home</string>
    <string name="nav_status">Status</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_log_book">Log Book</string>
    <string name="michelin_connected_fleet_logo">Michelin Connected Fleet Logo</string>
    <string name="michelin_logo_description">Michelin Connected Fleet Logo</string>
    <string name="hours_remaining_today">Hours Remaining Today</string>
    <string name="time_remaining_break">Break</string>
    <string name="time_remaining_driving">Driving</string>
    <string name="time_remaining_day_reset">Day reset</string>
    <string name="home_label_logs">Logs:</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="chevron_right">Chevron right</string>

    <string name="hour_minute_second">%1$02d:%2$02d:%3$02d</string>
    <string name="hour_minute_filler">10:21:19</string>
    <string name="change_status">Change\n Status</string>
    <string name="current_status_colon">Current status:</string>
    <string name="current_timezone_colon">Current Timezone:</string>
    <string name="current_time_colon">Current Time:</string>

    <array name="statuses">
        <item>Driving</item>
        <item>On break</item>
        <item>Off shift</item>
        <item>Maintenance</item>
        <item>Personal conveyance</item>
        <item>Sleeper berth</item>
        <item>Unloading</item>
        <item>Loading</item>
    </array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_29">29</string>
    <string name="jan">JAN</string>
    <string name="default_profile_name">Guest User</string>
    <string name="default_profile_email">Please log in</string>
    <string name="current_timezone_format">Current Timezone: %s</string>
    <string name="distance_driven_format">%1$.2f %2$s</string>
    <string name="total_distance_label">Total Distance Driven (Career)</string>
    <string name="loading">Loading...</string>
    <string name="use_metric_units">Use Metric Units</string>
    <string name="view_regulations">View Regulations</string>
    <string name="driver_statistics">Driver Statistics</string>
    <string name="current_timezone">Current Timezone</string>
    <string name="truck_colon">Truck:</string>
    <string name="example">Example</string>
    <string name="odometer_colon">Odometer:</string>
    <string name="vehicle_info">Vehicle Info</string>
</resources>