<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/account_circle_24px"
                android:title="@string/nav_profile" />

        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/home_24px"
                android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_log_book"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/nav_log_book" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

    </group>
</menu>