<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.status.StatusFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_status"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primary_blue" />

        <LinearLayout
                android:layout_marginHorizontal="64dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_button_background"
                android:gravity="center_horizontal"
                android:elevation="6dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/current_status_colon" />

            <TextView
                    android:id="@+id/textview_status_current_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@array/statuses" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/current_time_colon"
                    android:layout_marginTop="8dp" />

            <TextView
                    android:id="@+id/textview_status_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    tools:text="12:00:00 PM" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/current_timezone_colon"
                    android:layout_marginTop="8dp" />

            <TextView
                    android:id="@+id/textview_status_timezone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    tools:text="America/New_York" />

        </LinearLayout>

        <Spinner
                android:id="@+id/spinner_change_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
