<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

    <LinearLayout
            android:id="@+id/linear_layout_date_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/text_view_item_logs_date_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="36sp"
                android:text="@string/_29"/>

        <TextView
                android:id="@+id/text_view_item_logs_date_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="-8dp"
                android:text="@string/jan"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/linear_layout_date_wrapper"
            app:layout_constraintEnd_toStartOf="@id/chevron_right">

        <TextView
                android:id="@+id/text_view_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Status: DRIVING" />

        <TextView
                android:id="@+id/text_view_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="Distance: 50 mi" />

        <TextView
                android:id="@+id/text_view_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="Speed: 65 mph" />

    </LinearLayout>

    <ImageButton
            android:id="@+id/chevron_right"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:src="@drawable/chevron_right_24px"
            android:contentDescription="@string/chevron_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>